cluster/default/registry/registry.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: default
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      allow 192.168.1.0/24;
      allow 10.0.0.0/8;
      deny all;
spec:
  rules:
    - host: r.sko.ai
      http:
        paths:
          - backend:
              serviceName: registry
              servicePort: 5000
            path: /.+
          - backend:
              serviceName: reg
              servicePort: 8080
            path: /
          - backend:
              serviceName: reg
              servicePort: 8080
            path: /(repo|static)
  tls:
    - hosts:
        - r.sko.ai
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: registry
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: default
spec:
  serviceName: registry
  replicas: 1
  selector:
    matchLabels:
      app: registry
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: registry
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - registry
              topologyKey: kubernetes.io/hostname
      tolerations:
        - effect: NoExecute
          operator: Exists
        - effect: NoSchedule
          operator: Exists
      containers:
        - image: registry:2.7.1
          name: registry
          ports:
            - containerPort: 5000
              name: registry
          volumeMounts:
            - name: var-lib-registry
              mountPath: /var/lib/registry
          livenessProbe:
            httpGet:
              path: /
              port: 5000
      volumes:
        - name: var-lib-registry
          persistentVolumeClaim:
            claimName: registry-v3
